feat: implement branch, role, position APIs (#1)
